objects/Validate__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>True if validation fails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step</label>
        <referenceTo>Step__c</referenceTo>
        <relationshipLabel>Vallidate</relationshipLabel>
        <relationshipName>Vallidate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Vallidate</relationshipLabel>
        <relationshipName>Vallidate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Validation Type</label>
        <picklist>
            <picklistValues>
                <fullName>SOQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metadata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inline Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lookup Class</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Validation_Logic__c</fullName>
        <description>If First Serve is selected then as soon as the first one is validated successfully loop exist and shows validation message.  If Unanimous is selected then we expect all validation to pass.  If one fails, exit loop and show failure message.</description>
        <inlineHelpText>If First Serve is selected then as soon as the first one is validated successfully loop exist and shows validation message.  If Unanimous is selected then we expect all validation to pass.  If one fails, exit loop and show failure message.</inlineHelpText>
        <label>Validation Logic</label>
        <picklist>
            <picklistValues>
                <fullName>First Serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unanimous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Validation__c</fullName>
        <label>Validation (SOQL or Metadata)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Validate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Body__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Validate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Validate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>